Performance Investigator Carbide extension 2.3.0